--- a/index.html
+++ b/index.html
@@ -15,38 +15,113 @@
 
 <body>
   <header class="header mt-4">
-    <div class="container">
-      <div class="header-left d-flex align-items-center">
-        <h2 class="header-logo">MEGA.news</h2>
-        <ul class="header-menu mb-0 d-flex align-items-center">
+    <div class="header-container">
+      <div class="header-inner d-flex col-12 justify-content-between align-items-center">
+        <!-- Left -->
+        <div class="header-left d-flex align-items-center">
+          <h2 class="header-logo me-4">MEGA.news</h2>
+          <ul class="header-menu mb-0 d-flex align-items-center">
 
-          <li class="header-link list-group-item me-4">
-            <a class="header-link text-decoration-none text-black fw-medium" href="#">Categories</a>
+            <li class="header-link list-group-item me-4">
+              <a class="header-link text-decoration-none text-black fw-medium" href="#">Categories</a>
+              <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </li>
+
+            <li class="header-link list-group-item me-4">
+              <a class="header-link text-decoration-none text-black fw-medium" href="#">Pages</a>
+              <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </li>
+
+            <li class="header-link list-group-item me-4">
+              <a class="header-linkk text-decoration-none text-black fw-medium" href="#">Contact Us</a>
+            </li>
+
+            <li class="header-link list-group-item">
+              <a class="header-linkk text-decoration-none text-black fw-medium" href="#">About Us</a>
+            </li>
+
+
+
+          </ul>
+        </div>
+
+        <!-- Right -->
+        <div class="header-right d-flex align-items-center gap-4">
+          <div class="search-container">
+            <div class="menu-dots">
+              <span class="serach-span"></span>
+              <span class="serach-span"></span>
+              <span class="serach-span"></span>
+            </div>
+            <input class="search-input" type="text" placeholder="Search Anything" />
+            <button class="search-button">
+              <img src="./images/search.png" alt="Search" />
+            </button>
+          </div>
+
+
+          <div class="header-profile d-flex align-items-center gap-2">
+            <img class="header-profile-img" src="./images/steve.jpg" alt="Your IMG">
+            <h5 class="header-user mb-0">Steve</h5>
             <i class="fa fa-angle-down" aria-hidden="true"></i>
-          </li>
+          </div>
 
-          <li class="header-link list-group-item me-4">
-            <a class="header-link text-decoration-none text-black fw-medium" href="#">Pages</a>
-            <i class="fa fa-angle-down" aria-hidden="true"></i>
-          </li>
+          <div class="save-icon-div ms-4">
+            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="48" height="48" rx="12" fill="#F5F5F5" />
+              <path
+                d="M29.625 14C30.6406 14 31.5 14.8594 31.5 15.875V32.75C31.5 33.7266 30.4453 34.3125 29.5859 33.8438L24 30.5625L18.375 33.8438C17.5156 34.3125 16.5 33.7266 16.5 32.75V15.875C16.5 14.8594 17.3203 14 18.375 14H29.625ZM29.625 31.6562V16.1094C29.625 15.9922 29.5078 15.875 29.3516 15.875H18.5703C18.4531 15.875 18.375 15.9922 18.375 16.1094V31.6562L24 28.375L29.625 31.6562Z"
+                fill="#3E3232" />
+            </svg>
+          </div>
 
-          <li class="header-link list-group-item me-4">
-            <a class="header-link text-decoration-none text-black fw-medium" href="#">Contact Us</a>
-          </li>
-
-          <li class="header-link list-group-item">
-            <a class="header-link text-decoration-none text-black fw-medium" href="#">About Us</a>
-          </li>
-
-
-
-        </ul>
+        </div>
       </div>
-      <div class="header-right col-6">
-
+      <!-- Bottom -->
+      <div class="header-bottom mt-5 d-flex align-items-center">
+        <p class="header-bottom-text mb-0 mt-0 me-2 fw-medium">Home</p>
+        <svg width="15" height="15" viewBox="0 0 7 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M1.5 10C1.28906 10 1.10156 9.92969 0.960938 9.78906C0.65625 9.50781 0.65625 9.01562 0.960938 8.73438L4.17188 5.5L0.960938 2.28906C0.65625 2.00781 0.65625 1.51562 0.960938 1.23438C1.24219 0.929688 1.73438 0.929688 2.01562 1.23438L5.76562 4.98438C6.07031 5.26562 6.07031 5.75781 5.76562 6.03906L2.01562 9.78906C1.875 9.92969 1.6875 10 1.5 10Z"
+            fill="#3E3232" fill-opacity="0.5" />
+        </svg>
+        <p class="header-bottom-text1 mb-0 ms-1">Profile Market</p>
       </div>
     </div>
   </header>
+
+  <!-- HERO  -->
+
+  <section class="hero">
+    <div class="hero-container">
+      <div class="hero-inner mt-5">
+        <!-- Top -->
+        <div class="hero-top">
+          <img class="hero-top-img" src="./images/hero-img.png" alt="Hero Img">
+        </div>
+        <!-- Bottom -->
+        <div class="hero-bottom mt-3 d-flex align-items-center col-7 justify-content-between">
+          <div class="hero-bottom-user d-flex align-items-center gap-4">
+            <img class="hero-bottom-img" src="./images/alex.jpg" alt="Alex Img">
+            <h5 class="hero-bottom-name mb-0  fw-medium">Alex ibn Alex</h5>
+          </div>
+          <!-- Menu -->
+          <div class="hero-menu d-flex align-items-center justify-content-center gap-4 fw-bold">
+            <p class="hero-menu-text1 mb-0">
+              Marked
+            </p>
+            <p class="hero-menu-text2 mb-0">
+              Send Post
+            </p>
+            <p class="hero-menu-text3 mb-0">
+              Posts
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" />
 <!-- Bootstrap -->
