--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Left -->
         <div class="header-left d-flex align-items-center">
           <h2 class="header-logo me-4">MEGA.news</h2>
-          <ul class="header-menu mb-0 d-flex align-items-center">
+          <ul class="header-menu mb-0 d-xl-flex align-items-center d-none">
 
             <li class="header-link list-group-item me-4">
               <a class="header-link text-decoration-none text-black fw-medium" href="#">Categories</a>
@@ -47,7 +47,7 @@
 
         <!-- Right -->
         <div class="header-right d-flex align-items-center gap-4">
-          <div class="search-container">
+          <div class="search-container d-sm-flex d-none">
             <div class="menu-dots">
               <span class="serach-span"></span>
               <span class="serach-span"></span>
@@ -66,13 +66,17 @@
             <i class="fa fa-angle-down" aria-hidden="true"></i>
           </div>
 
-          <div class="save-icon-div ms-4">
+          <div class="save-icon-div ms-4 d-xl-block d-none">
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="48" height="48" rx="12" fill="#F5F5F5" />
               <path
                 d="M29.625 14C30.6406 14 31.5 14.8594 31.5 15.875V32.75C31.5 33.7266 30.4453 34.3125 29.5859 33.8438L24 30.5625L18.375 33.8438C17.5156 34.3125 16.5 33.7266 16.5 32.75V15.875C16.5 14.8594 17.3203 14 18.375 14H29.625ZM29.625 31.6562V16.1094C29.625 15.9922 29.5078 15.875 29.3516 15.875H18.5703C18.4531 15.875 18.375 15.9922 18.375 16.1094V31.6562L24 28.375L29.625 31.6562Z"
                 fill="#3E3232" />
             </svg>
+          </div>
+
+          <div class="hamburger-menu d-block d-xl-none">
+            <i class="fa fa-bars" aria-hidden="true"></i>
           </div>
 
         </div>
@@ -92,7 +96,7 @@
 
   <!-- HERO  -->
 
-  <section class="hero">
+  <section class="hero d-none">
     <div class="hero-container">
       <div class="hero-inner mt-5">
         <!-- Top -->
