header and hero responsive completed

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <!-- Bottom -->
-      <div class="header-bottom mt-5 d-flex align-items-center">
+      <div class="header-bottom mt-5 d-xl-flex align-items-center d-none">
         <p class="header-bottom-text mb-0 mt-0 me-2 fw-medium">Home</p>
         <svg width="15" height="15" viewBox="0 0 7 10" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -96,15 +96,15 @@
 
   <!-- HERO  -->
 
-  <section class="hero d-none">
+  <section class="hero">
     <div class="hero-container">
-      <div class="hero-inner mt-5">
+      <div class="hero-inner mt-5 d-flex flex-wrap">
         <!-- Top -->
-        <div class="hero-top">
+        <div class="hero-top d-flex align-items-center justify-content-center col-12">
           <img class="hero-top-img" src="./images/hero-img.png" alt="Hero Img">
         </div>
         <!-- Bottom -->
-        <div class="hero-bottom mt-3 d-flex align-items-center col-7 justify-content-between">
+        <div class="hero-bottom mt-3 d-flex col-lg-7 justify-content-sm-between justify-content-center flex-wrap align-items-center col-12">
           <div class="hero-bottom-user d-flex align-items-center gap-4">
             <img class="hero-bottom-img" src="./images/alex.jpg" alt="Alex Img">
             <h5 class="hero-bottom-name mb-0  fw-medium">Alex ibn Alex</h5>
