main section 30% completed

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
           <img class="hero-top-img" src="./images/hero-img.png" alt="Hero Img">
         </div>
         <!-- Bottom -->
-        <div class="hero-bottom mt-3 d-flex col-lg-7 justify-content-sm-between justify-content-center flex-wrap align-items-center col-12">
+        <div
+          class="hero-bottom mt-3 d-flex col-lg-7 justify-content-sm-between justify-content-center flex-wrap align-items-center col-12">
           <div class="hero-bottom-user d-flex align-items-center gap-4">
             <img class="hero-bottom-img" src="./images/alex.jpg" alt="Alex Img">
             <h5 class="hero-bottom-name mb-0  fw-medium">Alex ibn Alex</h5>
@@ -122,6 +123,15 @@
             </p>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Main section -->
+  <section class="main-sec">
+    <div class="container">
+      <div class="main-sec-inner d-flex flex-wrap justify-content-around">
+
       </div>
     </div>
   </section>
