--- a/index.html
+++ b/index.html
@@ -136,6 +136,110 @@
     </div>
   </section>
 
+
+  <!-- Footer -->
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-inner d-flex align-items-center justify-content-around flex-wrap">
+        <!-- Footer Left -->
+        <div class="footer-left col-5">
+          <div class="footer-l-top d-flex align-items-center justify-content-between">
+            <h4 class="footer-logo mb-4">MEGA.news</h4>
+            <p class="footer-l-t-text text-white m-0">
+              123 Market St. #22B <br>
+              Charlottesville, California 44635
+            </p>
+          </div>
+
+          <div class="footer-l-bottom">
+
+            <div class="d-flex align-items-center justify-content-center col-10 mt-5">
+              <p class="footer-number text-white">
+                <u>(434) 546-4356</u>
+              </p>
+            </div>
+
+            <div class="d-flex align-items-center justify-content-center col-10">
+              <p class="footer-email text-white">
+                <u>contact@lift.agency</u>
+              </p>
+            </div>
+
+          </div>
+
+        </div>
+
+        <!-- Footer Right -->
+        <div class="footer-right">
+          <div class="container">
+            <div class="footer-right-inner d-flex align-items-center">
+              <!-- UL ONE -->
+              <div class="footer-line d-flex align-items-center gap-5">
+
+
+                <ul class="footer-ul-one">
+
+                  <li class="footer-link-one  mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">About</a>
+                  </li>
+
+                  <li class="footer-link-one mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Growers</a>
+                  </li>
+
+                  <li class="footer-link-one mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Merchants</a>
+                  </li>
+
+                  <li class="footer-link-one mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Partners</a>
+                  </li>
+                  <li class="footer-link-one">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Contact</a>
+                  </li>
+                </ul>
+                <!-- UL TWO -->
+                <ul class="footer-ul-one">
+
+                  <li class="footer-link-one mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Facebook</a>
+                  </li>
+
+                  <li class="footer-link-one mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Twitter</a>
+                  </li>
+
+                  <li class="footer-link-one mb-2">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Linkedin</a>
+                  </li>
+
+                  <li class="footer-link-one">
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Instagram</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-button">
+                <i class="fa-solid fa-arrow-up"></i>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+<div class="footer-bottom">
+  <div class="footer-b-container">
+    <div class="footer-b-inner d-flex align-items-center">
+      <p class="footer-b-text text-white  mt-5">
+        © 2022 Mega.news. All rights reserved
+      </p>
+  </div>
+</div>
+
+      </div>
+    </div>
+  </footer>
+
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" />
 <!-- Bootstrap -->
