--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
   <footer>
     <div class="footer-container">
-      <div class="footer-inner d-flex align-items-center justify-content-around flex-wrap">
+      <div class="footer-inner d-flex align-items-center justify-content-md-around justify-content-center flex-wrap">
         <!-- Footer Left -->
-        <div class="footer-left col-5">
-          <div class="footer-l-top d-flex align-items-center justify-content-between">
+        <div class="footer-left col-lg-5 col-12">
+          <div class="footer-l-top d-flex align-items-center justify-content-md-between justify-content-center flex-wrap">
             <h4 class="footer-logo mb-4">MEGA.news</h4>
-            <p class="footer-l-t-text text-white m-0">
+            <p class="footer-l-t-text text-white m-0 text-center">
               123 Market St. #22B <br>
               Charlottesville, California 44635
             </p>
@@ -154,13 +154,13 @@
 
           <div class="footer-l-bottom">
 
-            <div class="d-flex align-items-center justify-content-center col-10 mt-5">
+            <div class="d-flex align-items-center justify-content-center col-md-10 col-12 mt-5">
               <p class="footer-number text-white">
                 <u>(434) 546-4356</u>
               </p>
             </div>
 
-            <div class="d-flex align-items-center justify-content-center col-10">
+            <div class="d-flex align-items-center justify-content-center col-md-10 col-12">
               <p class="footer-email text-white">
                 <u>contact@lift.agency</u>
               </p>
@@ -180,46 +180,46 @@
 
                 <ul class="footer-ul-one">
 
-                  <li class="footer-link-one  mb-2">
+                  <li class="footer-link-one  mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">About</a>
                   </li>
 
-                  <li class="footer-link-one mb-2">
+                  <li class="footer-link-one mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Growers</a>
                   </li>
 
-                  <li class="footer-link-one mb-2">
+                  <li class="footer-link-one mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Merchants</a>
                   </li>
 
-                  <li class="footer-link-one mb-2">
+                  <li class="footer-link-one mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Partners</a>
                   </li>
-                  <li class="footer-link-one">
+                  <li class="footer-link-one list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Contact</a>
                   </li>
                 </ul>
                 <!-- UL TWO -->
                 <ul class="footer-ul-one">
 
-                  <li class="footer-link-one mb-2">
+                  <li class="footer-link-facebook mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Facebook</a>
                   </li>
 
-                  <li class="footer-link-one mb-2">
+                  <li class="footer-link-twitter mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Twitter</a>
                   </li>
 
-                  <li class="footer-link-one mb-2">
+                  <li class="footer-link-linkedin mb-2 list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Linkedin</a>
                   </li>
 
-                  <li class="footer-link-one">
+                  <li class="footer-link-instagram list-group-item">
                     <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Instagram</a>
                   </li>
                 </ul>
               </div>
-              <div class="footer-button">
+              <div class="footer-button d-xl-flex d-none">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
 
