--- a/index.html
+++ b/index.html
@@ -203,19 +203,19 @@
                 <ul class="footer-ul-one">
 
                   <li class="footer-link-facebook mb-2 list-group-item">
-                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Facebook</a>
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" target="_blank" href="https://www.facebook.com/MEGANewsTV1/">Facebook</a>
                   </li>
 
                   <li class="footer-link-twitter mb-2 list-group-item">
-                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Twitter</a>
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" target="_blank" href="https://x.com/meganews_mx">Twitter</a>
                   </li>
 
                   <li class="footer-link-linkedin mb-2 list-group-item">
-                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Linkedin</a>
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" target="_blank" href="#">Linkedin</a>
                   </li>
 
                   <li class="footer-link-instagram list-group-item">
-                    <a class="footer-linkk text-decoration-none text-white fw-medium" href="#">Instagram</a>
+                    <a class="footer-linkk text-decoration-none text-white fw-medium" target="_blank" href="https://www.instagram.com/ahmadfdev/?next=%2F">Instagram</a>
                   </li>
                 </ul>
               </div>
